--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url(./theme.css);
+
 :root {
   font-family: system-ui, -apple-system;
   font-synthesis: none;
@@ -16,4 +18,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
