--- a/src/features/musicbrainz/components/Modal/Modal.module.css
+++ b/src/features/musicbrainz/components/Modal/Modal.module.css
@@ -3,11 +3,11 @@
   inset: 0;
   border: none;
   outline: none;
-  background-color: var(--background-color);
-  transition: 200ms ease-in-out;
   overflow: hidden;
   margin: auto;
   padding: 5px;
+  max-width: 92dvw;
+  background-color: var(--background-color);
 
   .modal-body {
     box-shadow: inset 0 0 0 1px white;
@@ -15,24 +15,24 @@
   }
 
   &[open] {
-    visibility: visible;
     animation: open 400ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
   }
 
   &:not([open]) {
     visibility: hidden;
     animation: close 200ms ease-in-out;
+    transition: 200ms ease-in-out;
   }
 }
 
 @keyframes open {
   from {
-    transform: scaleX(0.5);
     opacity: 0;
+    transform: scaleX(0.5);
   }
   to {
-    transform: scaleX(1);
     opacity: 1;
+    transform: scaleX(1);
   }
 }
 
