--- a/src/features/cover-art/components/Thumbnail/Thumbanil.module.css
+++ b/src/features/cover-art/components/Thumbnail/Thumbanil.module.css
@@ -1,10 +1,21 @@
-.figure {
-  display: inline-block;
+.btn {
+  appearance: none;
+  border-radius: 0;
+  text-align: inherit;
+  background: none;
+  box-shadow: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+
+  &:focus {
+    outline: solid 1px white;
+    border-radius: 0;
+  }
 }
 
 .image {
   max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
-  width: 200px;
-  height: 200px;
 }
