--- a/src/features/musicbrainz/components/Modal/Modal.module.css
+++ b/src/features/musicbrainz/components/Modal/Modal.module.css
@@ -7,9 +7,12 @@
   margin: auto;
   padding: 5px;
   max-width: 92dvw;
+  max-height: 92dvh;
   background-color: var(--background-color);
 
   .modal-body {
+    height: max-content;
+    overflow: auto;
     box-shadow: inset 0 0 0 1px white;
     padding: 1em;
   }
